feat: improve search

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,5 +1,12 @@
 :root {
-  font-family: Torus, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family:
+    Hiragino Maru Gothic Pro,
+    Torus,
+    system-ui,
+    Avenir,
+    Helvetica,
+    Arial,
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
