--- a/apps/web/ios/App/App/Base.lproj/LaunchScreen.storyboard
+++ b/apps/web/ios/App/App/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,13 +17,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.65000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" id="hjo-eJ-zu9">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.65000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" id="hjo-eJ-zu9">
                                 <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-adornment" translatesAutoresizingMaskIntoConstraints="NO" id="x4q-UQ-LDv" userLabel="splash-adornment">
-                                <rect key="frame" x="151" y="610" width="128" height="128"/>
+                                <rect key="frame" x="151" y="634" width="128" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="128" id="BqS-Of-3c1"/>
                                     <constraint firstAttribute="height" constant="128" id="u4S-2q-uRA"/>
@@ -33,7 +33,7 @@
                         <viewLayoutGuide key="safeArea" id="Ku0-d9-NiU"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Ku0-d9-NiU" firstAttribute="bottom" secondItem="x4q-UQ-LDv" secondAttribute="bottom" constant="160" id="6ll-Sn-ull"/>
+                            <constraint firstItem="Ku0-d9-NiU" firstAttribute="bottom" secondItem="x4q-UQ-LDv" secondAttribute="bottom" constant="136" id="6ll-Sn-ull"/>
                             <constraint firstItem="x4q-UQ-LDv" firstAttribute="centerX" secondItem="2n0-qO-tBF" secondAttribute="centerX" id="RuJ-76-Y3n"/>
                         </constraints>
                     </view>
@@ -44,7 +44,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Splash" width="768" height="768"/>
+        <image name="splash" width="768" height="768"/>
         <image name="splash-adornment" width="512" height="437"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
