--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -15,10 +15,8 @@
 @font-face {
   font-family: "Torus";
   src:
-    url("https://dxrating-assets.imgg.dev/fonts/Torus-Regular.woff2")
-      format("woff2"),
-    url("https://dxrating-assets.imgg.dev/fonts/Torus-Regular.woff")
-      format("woff");
+    url("https://shama.dxrating.net/fonts/Torus-Regular.woff2") format("woff2"),
+    url("https://shama.dxrating.net/fonts/Torus-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -27,10 +25,8 @@
 @font-face {
   font-family: "Torus";
   src:
-    url("https://dxrating-assets.imgg.dev/fonts/Torus-SemiBold.woff2")
-      format("woff2"),
-    url("https://dxrating-assets.imgg.dev/fonts/Torus-SemiBold.woff")
-      format("woff");
+    url("https://shama.dxrating.net/fonts/Torus-SemiBold.woff2") format("woff2"),
+    url("https://shama.dxrating.net/fonts/Torus-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
